manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "smartcitykubernetes1-70ef"
    labels:
        app: "smartcitykubernetes1-70ef"
spec:
    type: ClusterIP
    ports:
    - port: 7788
      targetPort: 7788
      protocol: TCP
      name: http
    selector:
        app: "smartcitykubernetes1-70ef"
